--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit BusIO@^1.11.4
+	adafruit/Adafruit GFX Library@^1.10.15
+	adafruit/Adafruit SSD1306@^2.5.3
