--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.11.4
 	adafruit/Adafruit GFX Library@^1.10.15
 	adafruit/Adafruit SSD1306@^2.5.3
+	arkhipenko/TaskScheduler@^3.6.0
