--- a/platformio.ini
+++ b/platformio.ini
@@ -1,19 +1,34 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+[platformio]
+description =  Inframote IRRemote Decoder is a IR Remote decoding device which can decode remote signals to a digital form which computer can understand. 
+default_envs = release
 
-[env:uno]
+[env]
 platform = atmelavr
-board = uno
 framework = arduino
 lib_deps = 
 	adafruit/Adafruit BusIO@^1.11.4
 	adafruit/Adafruit GFX Library@^1.10.15
 	adafruit/Adafruit SSD1306@^2.5.3
 	arkhipenko/TaskScheduler@^3.6.0
+
+[env:release]
+board = ATmega328P
+lib_deps = ${env.lib_deps}
+
+upload_protocol = custom
+upload_port = usb
+upload_flags =
+    -C
+    ; use "tool-avrdude-megaavr" for the atmelmegaavr platform
+    ${platformio.packages_dir}/tool-avrdude/avrdude.conf
+    -p
+    $BOARD_MCU
+    -P
+    $UPLOAD_PORT
+    -c
+    usbasp
+upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
+
+[env:build]
+board = uno
+lib_deps = ${env.lib_deps}
