added ir remote feature

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,16 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
-description =  Inframote IRRemote Decoder is a IR Remote decoding device which can decode remote signals to a digital form which computer can understand. 
-default_envs = release
+description = Inframote IRRemote Decoder is a IR Remote decoding device which can decode remote signals to a digital form which computer can understand.
+default_envs = build
 
 [env]
 platform = atmelavr
@@ -13,22 +23,25 @@ lib_deps =
 
 [env:release]
 board = ATmega328P
-lib_deps = ${env.lib_deps}
-
+lib_deps = 
+	${env.lib_deps}
+	z3t0/IRremote@^3.7.1
 upload_protocol = custom
 upload_port = usb
-upload_flags =
-    -C
-    ; use "tool-avrdude-megaavr" for the atmelmegaavr platform
-    ${platformio.packages_dir}/tool-avrdude/avrdude.conf
-    -p
-    $BOARD_MCU
-    -P
-    $UPLOAD_PORT
-    -c
-    usbasp
+upload_flags = 
+	-C
+	${platformio.packages_dir}/tool-avrdude/avrdude.conf
+	-p
+	$BOARD_MCU
+	-P
+	$UPLOAD_PORT
+	-c
+	usbasp
 upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
 
 [env:build]
 board = uno
-lib_deps = ${env.lib_deps}
+lib_deps = 
+	${env.lib_deps}
+	; crankyoldgit/IRremoteESP8266@^2.8.2
+	z3t0/IRremote@^3.7.1
