successfully loaded the splashscreen

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,13 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
 description = Inframote IRRemote Decoder is a IR Remote decoding device which can decode remote signals to a digital form which computer can understand.
 default_envs = build
@@ -10,7 +20,7 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.11.4
 	adafruit/Adafruit GFX Library@^1.10.15
 	adafruit/Adafruit SSD1306@^2.5.3
-	arkhipenko/TaskScheduler@^3.6.0
+	; crankyoldgit/IRremoteESP8266@^2.8.2
 
 [env:build]
 lib_deps = 
