added ir receiving functionalities

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,8 +20,9 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.11.4
 	adafruit/Adafruit GFX Library@^1.10.15
 	adafruit/Adafruit SSD1306@^2.5.3
-	; crankyoldgit/IRremoteESP8266@^2.8.2
+	crankyoldgit/IRremoteESP8266@^2.8.2
 
 [env:build]
+monitor_speed = 74880 
 lib_deps = 
 	${env.lib_deps}
